test/samples/invalid/consts_non_const.invalid.sol
/// #const uint256 H := msg.value;
contract A {
    function testHD() public {}
}